Fix line height in contents list when headings get too long to fit

--- a/src/App.css
+++ b/src/App.css
@@ -577,8 +577,8 @@ p:has(img) {
 
 .contents li {
   transition: transform 0.2s ease-in-out;
-  /* line-height: 1.2rem; */
-  /* margin-bottom: 1rem; */
+  line-height: 1.3;
+  margin-bottom: 0.6rem;
 }
 
 .contents li.active {
